--- a/style.css
+++ b/style.css
@@ -1,82 +1,58 @@
-html {
-  box-sizing: border-box;
-  font-size: 10px;
-  background: #8E24AA;
-  background: linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);
-}
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  text-align: center;
-  font-family: 'Inconsolata', monospace;
+html {
+  font-size: 10px;
+  background: #ffc600;
+  box-sizing: border-box;
 }
 
-.display__time-left {
-  font-weight: 100;
-  font-size: 20rem;
-  margin: 0;
-  color: white;
-  text-shadow: 4px 4px 0 rgba(0,0,0,0.05);
+.photobooth {
+  background: white;
+  max-width: 150rem;
+  margin: 2rem auto;
+  border-radius: 2px;
 }
 
-.timer {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+/*clearfix*/
+.photobooth:after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
-.timer__controls {
-  display: flex;
+.photo {
+  width: 100%;
+  float: left;
 }
 
-.timer__controls > * {
-  flex: 1;
+.player {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width:200px;
 }
 
-.timer__controls form {
-  flex: 1;
-  display: flex;
-}
+/*
+  Strip!
+*/
 
-.timer__controls input {
-  flex: 1;
-  border: 0;
+.strip {
   padding: 2rem;
 }
 
-.timer__button {
-  background: none;
-  border: 0;
-  cursor: pointer;
-  color: white;
-  font-size: 2rem;
-  text-transform: uppercase;
-  background: rgba(0,0,0,0.1);
-  border-bottom: 3px solid rgba(0,0,0,0.2);
-  border-right: 1px solid rgba(0,0,0,0.2);
-  padding: 1rem;
-  font-family: 'Inconsolata', monospace;
+.strip img {
+  width: 100px;
+  overflow-x: scroll;
+  padding: 0.8rem 0.8rem 2.5rem 0.8rem;
+  box-shadow: 0 0 3px rgba(0,0,0,0.2);
+  background: white;
 }
 
-.timer__button:hover,
-.timer__button:focus {
-  background: rgba(0,0,0,0.2);
-  outline: 0;
-}
-
-.display {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.display__end-time {
-  font-size: 4rem;
-  color: white;
-}s
+.strip a:nth-child(5n+1) img { transform: rotate(10deg); }
+.strip a:nth-child(5n+2) img { transform: rotate(-2deg); }
+.strip a:nth-child(5n+3) img { transform: rotate(8deg); }
+.strip a:nth-child(5n+4) img { transform: rotate(-11deg); }
+.strip a:nth-child(5n+5) img { transform: rotate(12deg); }
